test/conformance/reject/container_children.hdoc
hdoc(version="2.0", lang="en");

ul {
  li {
    h1 "Heading child"
  }
}

note {
  h1 "Inside note"
}
